// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonDark> global render should render 1`] = `
.c1 {
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-weight: 500;
  line-height: 1.125rem;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  height: 32px;
  color: #474747;
  background-color: #e7e7e7;
  cursor: pointer;
  border: solid transparent;
  border-width: 2px;
  border-radius: 4px;
  line-height: 1.75;
  padding: 0 16px;
  min-width: 64px;
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
}

.c0:hover {
  color: #474747;
  border-color: transparent;
  background-color: #d6d6d6;
  -webkit-transition: border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
}

.c0:active {
  color: #474747;
  border-color: #9b9b9b;
  background-color: #d6d6d6;
  -webkit-transition: color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out,background-color 0.1s ease-in-out;
}

.c0:disabled span {
  pointer-events: none;
}

.c0:disabled:hover {
  border-color: transparent;
}

<ButtonDark>
  <Component
    colors={
      Object {
        "background": Object {
          "primary": "#e7e7e7",
          "secondary": "#d6d6d6",
          "tertiary": "#f6f6f6",
        },
        "border": Object {
          "primary": "#9b9b9b",
          "secondary": "#e7e7e7",
          "tertiary": "#9b9b9b",
        },
        "text": Object {
          "primary": "#474747",
        },
      }
    }
  >
    <BaseButton
      theme={
        Object {
          "active": Object {
            "background": "#d6d6d6",
            "border": "#9b9b9b",
          },
          "background": "#e7e7e7",
          "color": "#474747",
          "disabled": Object {
            "background": "#f6f6f6",
            "color": "#9b9b9b",
          },
          "hover": Object {
            "background": "#d6d6d6",
          },
        }
      }
    >
      <styled.button
        theme={
          Object {
            "active": Object {
              "background": "#d6d6d6",
              "border": "#9b9b9b",
            },
            "background": "#e7e7e7",
            "color": "#474747",
            "disabled": Object {
              "background": "#f6f6f6",
              "color": "#9b9b9b",
            },
            "hover": Object {
              "background": "#d6d6d6",
            },
          }
        }
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": false,
                "lastClassName": "fEvedQ",
                "rules": Array [
                  "
  height: ",
                  [Function],
                  ";
  color: ",
                  [Function],
                  ";
  background-color: ",
                  [Function],
                  ";
  cursor: ",
                  [Function],
                  ";
  border: solid ",
                  "transparent",
                  ";
  border-width: ",
                  [Function],
                  ";
  border-radius: 4px;
  line-height: 1.75;
  padding: ",
                  [Function],
                  ";
  min-width: 64px;
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: ",
                  [Function],
                  ";
  display: inline-flex;
  position: relative;
  align-items: center;
  justify-content: center;
  outline: 0;
  &:hover {
    color: ",
                  [Function],
                  ";
    border-color: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
    transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out;
  }
  &:active {
    color: ",
                  [Function],
                  ";
    border-color: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
    transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
  }

  &:disabled {
    span {
      pointer-events: none;
    }
    &:hover {
      border-color: ",
                  "transparent",
                  ";
    }
  }
",
                ],
              },
              "displayName": "styled.button",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          theme={
            Object {
              "active": Object {
                "background": "#d6d6d6",
                "border": "#9b9b9b",
              },
              "background": "#e7e7e7",
              "color": "#474747",
              "disabled": Object {
                "background": "#f6f6f6",
                "color": "#9b9b9b",
              },
              "hover": Object {
                "background": "#d6d6d6",
              },
            }
          }
        >
          <button
            className="c0"
          >
            <styled.span>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  ",
                        "
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
",
                        "
  font-weight: 500;
  line-height: 1.125rem;
  font-size: ",
                        [Function],
                        ";
  display: flex;
",
                      ],
                    },
                    "displayName": "styled.span",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  Default
                </span>
              </StyledComponent>
            </styled.span>
          </button>
        </StyledComponent>
      </styled.button>
    </BaseButton>
  </Component>
</ButtonDark>
`;

exports[`<ButtonDark> global render should render 2`] = `
.c1 {
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-weight: 500;
  line-height: 1.125rem;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  height: 32px;
  color: #474747;
  background-color: transparent;
  cursor: pointer;
  border: solid transparent;
  border-width: 1px;
  border-radius: 4px;
  line-height: 1.75;
  padding: 0 16px;
  min-width: 64px;
  font-family: 'Source Sans Pro',Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
}

.c0:hover {
  color: #474747;
  border-color: #e7e7e7;
  background-color: transparent;
  -webkit-transition: border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
}

.c0:active {
  color: #474747;
  border-color: transparent;
  background-color: #e7e7e7;
  -webkit-transition: color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out,background-color 0.1s ease-in-out;
}

.c0:disabled span {
  pointer-events: none;
}

.c0:disabled:hover {
  border-color: transparent;
}

<ButtonDark
  variant="text"
>
  <Component
    colors={
      Object {
        "background": Object {
          "primary": "#e7e7e7",
          "secondary": "#d6d6d6",
          "tertiary": "#f6f6f6",
        },
        "border": Object {
          "primary": "#9b9b9b",
          "secondary": "#e7e7e7",
          "tertiary": "#9b9b9b",
        },
        "text": Object {
          "primary": "#474747",
        },
      }
    }
    variant="text"
  >
    <BaseButton
      theme={
        Object {
          "active": Object {
            "background": "#e7e7e7",
            "color": "#474747",
          },
          "background": "transparent",
          "color": "#474747",
          "disabled": Object {
            "color": "#9b9b9b",
          },
          "hover": Object {
            "background": "transparent",
            "border": "#e7e7e7",
          },
        }
      }
      variant="text"
    >
      <styled.button
        theme={
          Object {
            "active": Object {
              "background": "#e7e7e7",
              "color": "#474747",
            },
            "background": "transparent",
            "color": "#474747",
            "disabled": Object {
              "color": "#9b9b9b",
            },
            "hover": Object {
              "background": "transparent",
              "border": "#e7e7e7",
            },
          }
        }
        variant="text"
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "
  height: ",
                  [Function],
                  ";
  color: ",
                  [Function],
                  ";
  background-color: ",
                  [Function],
                  ";
  cursor: ",
                  [Function],
                  ";
  border: solid ",
                  "transparent",
                  ";
  border-width: ",
                  [Function],
                  ";
  border-radius: 4px;
  line-height: 1.75;
  padding: ",
                  [Function],
                  ";
  min-width: 64px;
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: ",
                  [Function],
                  ";
  display: inline-flex;
  position: relative;
  align-items: center;
  justify-content: center;
  outline: 0;
  &:hover {
    color: ",
                  [Function],
                  ";
    border-color: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
    transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out;
  }
  &:active {
    color: ",
                  [Function],
                  ";
    border-color: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
    transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
  }

  &:disabled {
    span {
      pointer-events: none;
    }
    &:hover {
      border-color: ",
                  "transparent",
                  ";
    }
  }
",
                ],
              },
              "displayName": "styled.button",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          theme={
            Object {
              "active": Object {
                "background": "#e7e7e7",
                "color": "#474747",
              },
              "background": "transparent",
              "color": "#474747",
              "disabled": Object {
                "color": "#9b9b9b",
              },
              "hover": Object {
                "background": "transparent",
                "border": "#e7e7e7",
              },
            }
          }
          variant="text"
        >
          <button
            className="c0"
          >
            <styled.span>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  ",
                        "
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
",
                        "
  font-weight: 500;
  line-height: 1.125rem;
  font-size: ",
                        [Function],
                        ";
  display: flex;
",
                      ],
                    },
                    "displayName": "styled.span",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  Default
                </span>
              </StyledComponent>
            </styled.span>
          </button>
        </StyledComponent>
      </styled.button>
    </BaseButton>
  </Component>
</ButtonDark>
`;
